<resources>
    <string name="app_name">Cat talks</string>
    <string name="userText">Type here smth</string>
    <string name="talkLabel">So the cat says:</string>
    <string name="catWords">Here are the cat words</string>
    <string name="catPic">catPic</string>
    <string name="activityAnswer">Say it in the app!</string>
    <string name="mailAnswer">Send it via e-mail!</string>
    <string name="mainLabel">What should the cat say?</string>
    <string name="aboutCatsBtn">About talking cats</string>
    <string name="catsInfo">Talking cats</string>
    <string name="catsText">blah-blah-blah</string>
    <string name="magicText">Cats can talk and become yummies as well ^___^</string>
    <string name="toTheCatsListBtn">Our cats</string>
    <string name="catName">*here is the cat name*</string>
    <string name="threadsMainTitle">How should a cat run?</string>
    <string name="btnForAsync">Using AsyncTask</string>
    <string name="btnForThreads">Using Threads</string>
    <string name="createBtn">Create</string>
    <string name="startBtn">Start</string>
    <string name="cancelBtn">Cancel</string>
    <string name="catWaySoFar">*cat progress...*</string>
    <string name="catInterrupted">The cat was interrupted :(</string>
    <string name="toastAboutCatCreationAsync">Async-create a cat first!</string>
    <string name="toastAboutCatCreationThread">Thread-create a cat first!</string>
</resources>
