<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.ponchitaz.my1staaproject.ThreadsMain">

    <ImageButton
        android:id="@+id/asyncForHaters"
        android:layout_width="0dp"
        android:layout_height="259dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btnForAsync"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/threadsForCats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@mipmap/cat_haters"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/threadsForCats"
        android:layout_width="0dp"
        android:layout_height="257dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btnForThreads"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/asyncForHaters"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:srcCompat="@mipmap/cat_dowhatwants"
        android:layout_marginRight="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="201dp" />

    <TextView
        android:id="@+id/threadsMainPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/threadsMainTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asyncCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnForAsync"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/threadCat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threadsMainPageTitle"
        app:layout_constraintVertical_bias="0.876"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/threadCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnForThreads"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/asyncCat"
        app:layout_constraintTop_toBottomOf="@+id/threadsMainPageTitle"
        app:layout_constraintVertical_bias="0.865"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="51dp" />
</android.support.constraint.ConstraintLayout>
